package server.model;


/**
 * @author Sandie Petersen & Nilas Thoegersen & Søren Wünsche & Asbjørn
 */
public enum GameState {
    INITIALIZING,
    SAVED,
    STARTED,
    ENDED,
    STOPPEDGAME

}
